Attempt at fixing page overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .nav-link {
   color: #EEEEEE;
 }
